feat(stats): support pretty-printing counts
