# openapi.yml
@@ -6,7 +6,7 @@ tags:
     description: Usage statistics
 info:
   title: Zero Width Shortener
-  version: 2.3.1
+  version: 2.4.0
   description: Shorten URLs with invisible spaces.
   license:
     name: Apache 2.0
@@ -167,21 +167,45 @@ paths:
           content:
             application/json:
               schema:
+                oneOf:
+                  - properties:
+                      urls:
+                        type: string
+                        example: '4,321'
+                        pattern: '^\d{1,3}(?:,\d{1,3})*$'
+                        readOnly: true
+                      visits:
+                        type: string
+                        example: '1,234'
+                        pattern: '^\d{1,3}(?:,\d{1,3})*$'
+                        readOnly: true
+                    required:
+                      - urls
+                      - visits
+                  - properties:
+                      urls:
+                        type: integer
+                        minimum: 0
+                        example: 4321
+                        readOnly: true
+                      visits:
+                        type: integer
+                        minimum: 0
+                        example: 1234
+                        readOnly: true
+                    required:
+                      - urls
+                      - visits
                 type: object
-                properties:
-                  urls:
-                    type: integer
-                    minimum: 0
-                    readOnly: true
-                  visits:
-                    type: integer
-                    minimum: 0
-                    readOnly: true
-                required:
-                  - urls
-                  - visits
         '500':
           $ref: '#/components/responses/Error'
+      parameters:
+        - schema:
+            type: boolean
+            default: 'false'
+          in: query
+          name: format
+          description: If the numbers should be formatted as human-readable strings
   /stats/shields/urls:
     get:
       summary: Shields endpoint for URLs
